basic functions added

--- a/README.Rmd
+++ b/README.Rmd
@@ -39,22 +39,27 @@ devtools::install_github("ianmoran11/ralget")
 This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
+library(tidyverse)
+library(tidygraph)
+library(tibble)
+library(ggraph)
+library(magrittr)
 library(ralget)
-## basic example code
+devtools::load_all()
+
+# Algebra ----------------------------------------------------------------------
+## Basic replication -----------------------------------------------------------
+p <- v("p"); q <- v("q"); s <- v("s"); r <- v("r"); 
+
+g1 <- p*q+s
+g2 <- q*s+q*r
+
+g1 %>% plot
+g2 %>% plot
+(g1+g2) %>% plot()
+
+g3 <- s*r
+g3 %>% plot()
+(g1*g3) %>% plot()
+
 ```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/master/examples>.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
