--- a/README.Rmd
+++ b/README.Rmd
@@ -290,7 +290,7 @@ p1 + p2 + p3
 
 #### The Cartesian product ( %x% )  
 
-The `%*%` operator creates the graph product. 
+The `%x%` operator creates the graph product. 
 
 ```{r echo=FALSE, results = "hide",  message=FALSE, warning=FALSE}
 v0 <- v(name = "00") 
