--- a/README.Rmd
+++ b/README.Rmd
@@ -27,6 +27,7 @@ library(magrittr)
 devtools::install(); 3
 #devtools::install(); 3
 library(ralget)
+format <- theme(plot.title = element_text(hjust = 0.5)) +  theme(panel.background = element_rect(fill = rgb(.95,.95,.95,1),color = NA)) 
 ```
 
 
@@ -429,5 +430,41 @@ $$
 
 ```{r}
 ((v2+v3)*v1)==((v2*v1)+(v3*v1))
+```
+
+### Edges 
+
+Edge attributes are added by interleaving e() between graph multiplication. 
+
+Here's a simple example:
+
+```{r echo=TRUE, results = "hide" }
+v("X1") * e("E:X1.X2") * v("X2")
+```
+
+```{r echo=FALSE, message=FALSE, warning=FALSE, include = TRUE, fig.height=6, fig.width=14.5}
+g <- v("X1") * e("E:X1.X2") * v("X2")
+
+plot(g)
+```
+
+This provides a framework for constructing and simulating data from DAGs.
+
+```{r echo=TRUE, message=FALSE, warning=FALSE, include = TRUE, fig.height=6, fig.width=14.5}
+z1 <- v("z1", form = quo(rnorm(1,100,15)))
+x1 <- v("x1", form = quo(rnorm(1,100,15)))
+x2 <- v("x2", form = quo(rnorm(1,100,15)))
+ y <- v("y", form = quo(rnorm(1,0,15)))
+
+reg <-   (sumv(x1*e(.5), x2*e(.3))*y) + ((z1*sumv(e(.4)*x1, e(.3)*y))) 
+
+plot(reg)
+```
+
+
+
+```{r echo=TRUE, message=FALSE, warning=FALSE, include = TRUE}
+ralget_sim(reg, 1000)
+
 ```
 
