--- a/vignettes/ralget-sir.Rmd
+++ b/vignettes/ralget-sir.Rmd
@@ -44,7 +44,6 @@ increment_t <- function(g, t = 1){
 S00 <-   v("S00",   .func = const(10000))
 I00 <-   v("I00",   .func = const(10))
 R00 <-   v("R00",   .func = const(0))
-
 # First period states 
 S01 <-   v("S01",   .func = sum)
 I01 <-   v("I01",   .func = sum)
@@ -112,6 +111,34 @@ geom_point()
 ```
 
 
+```{r echo=TRUE, message=FALSE, warning=FALSE, include = TRUE, fig.height=6, fig.width=14.5}
+# Connect 150 cycles end to end
+S01
+S02
+
+S01i <- map(letters[1:3],~ v(paste0("S0",.x))) %>% reduce(`+`)
+S02i <- map(letters[1:3],~ v(paste0("S1",.x))) %>% reduce(`+`)
+
+S <- S01i*S02i
+class(S) <- class(S)[-1]
+plot(S)
+
+crossing(l1 = letters[1:3],l2 = letters[1:3]) %>%
+mutate(comb = map2_chr(l1,l2, ~ sort(c(.x,.y)) %>% 
+              paste(collapse =""))) %>% 
+group_by(comb) %>% filter(row_number() == 1) %>%
+mutate(migration = ifelse(l1==l2,.95, abs(rnorm(1,.01,.03)))) %>%   
+ungroup(comb) %>% select(-comb) %>% spread(l1,migration)
+
+
+
+
+letters[1:3] %>% map(~ .x %>% paste0(letters[1:3])) %>% unlist()
+
+S %>% get_edge_names() %>%
+mutate(change = )
+
+```
 
 
 
