--- a/ralget-sir copy.Rmd
+++ b/ralget-sir copy.Rmd
@@ -12,6 +12,7 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
+
 ```
 
 ```{r setup}
@@ -21,6 +22,27 @@ library(ggraph)
 library(patchwork)
 library(magrittr)
 library(ralget)
+devtools::load_all()
+prefix <- function(g, p){g %>% mutate(name = paste0(p,"_",name))}
+
+migration_matrix <- 
+function(to = c("I-Mi","I-Mj","I-Mk"), 
+         from =c("I-1i","I-1j","I-1k"), 
+         persistence, 
+         migration){
+    crossing(l1 = to,l2=from) %>%
+    mutate(comb = map2_chr(l1,l2, ~ sort(c(.x,.y)) %>% 
+                paste(collapse =""))) %>% 
+    mutate(migration = 
+                ifelse(str_sub(l1,4,4)==str_sub(l2,4,4),
+                persistence, abs(rnorm(nrow(.),.01,migration)))) %>%   
+    group_by(l1) %>% 
+    mutate(migration = migration / sum( migration)) %>%
+    select(-comb) %>%
+    mutate(vert = pmap(list(l1,l2,migration),
+    function(l1,l2,migration){v(l1)*m(migration)*v(l2)}))
+}
+
 ```
 
 ```{r}
@@ -41,20 +63,24 @@ increment_t <- function(g, t = 1){
 
 ```{r}
 # Initial conditions
-S00 <-   v("S00",   .func = const(10000))
-I00 <-   v("I00",   .func = const(10))
-R00 <-   v("R00",   .func = const(0))
+S00 <- v("S00", .func = const(10000))
+I00 <- v("I00", .func = const(10))
+R00 <- v("R00", .func = const(0))
 # First period states 
-S01 <-   v("S01",   .func = sum)
-I01 <-   v("I01",   .func = sum)
-R01 <-   v("R01",   .func = sum)
+S01 <- v("S01", .func = sum)
+I01 <- v("I01", .func = sum)
+R01 <- v("R01", .func = sum)
 # Transition states 
 BIS01 <- v("BIS01", .func = product)
-GI01  <- v("GI01",  .func = product)
+GI01  <- v("GI01", .func = product)
 # Second period
-S02 <-   v("S02",   .func = sum)
-I02 <-   v("I02",   .func = sum)
-R02 <-   v("R02",   .func = sum)
+S02 <- v("S02", .func = sum)
+I02 <- v("I02", .func = sum)
+R02 <- v("R02", .func = sum)
+
+S03 <- v("S03", .func = sum)
+I03 <- v("I03", .func = sum)
+R03 <- v("R03", .func = sum)
 # Parameters 
 B <- v("B", .func = const(.3/10010))
 G <- v("G", .func = const(500/10010))
@@ -76,9 +102,36 @@ R01   * (m(1) * R02                 )  +
 BIS01 * (m(-1) * S02   + m(1)  * I02 ) + 
 GI01  * (m(-1) * I02   + m(1) *  R02 )  +
 B     * (m(1) * BIS01) +
-G     * (m(1) * GI01)
+G     * (m(1) * GI01) +
+S03 + I03 + R03
 
-plot(SIR0 + SIR)
+SIR01 <- SIR0 + SIR
+SIR01 <- map(letters[1:2],~ prefix(SIR0 + SIR, .x)) %>% reduce(`+`) 
+
+mig_s <- migration_matrix(c("a_S02","b_S02"),c("a_S03","b_S03"), .95,.10) %>% 
+         pull(vert) %>% reduce(`+`) %>%
+         mutate(.attrs = map(1,~ list(.func = sum)))
+
+mig_i <- migration_matrix(c("a_I02","b_I02"),c("a_I03","b_I03"), .95,.10) %>% 
+         pull(vert) %>% reduce(`+`) %>%
+         mutate(.attrs = map(1,~ list(.func = sum)))
+
+mig_r <- migration_matrix(c("a_R02","b_R02"),c("a_R03","b_R03"), .95,.10) %>% 
+         pull(vert) %>% reduce(`+`) %>%
+         mutate(.attrs = map(1,~ list(.func = sum)))
+
+plot(SIR01 + mig_s + mig_i + mig_r) 
+
+sirtm <- SIR01 + mig_s + mig_i + mig_r
+devtools::load_all()
+sirtm_p <- sirtm %>% evaluate_prepare()  
+
+
+evaluate_execute(sirtm_p)
+
+%>% as_tibble() %>% print(n = Inf)
+
+
 ```
 
 
@@ -122,6 +175,26 @@ S02i <- map(letters[1:3],~ v(paste0("S1",.x))) %>% reduce(`+`)
 S <- S01i*S02i
 class(S) <- class(S)[-1]
 plot(S)
+
+crossing(l1 = letters[1:3],l2 = letters[1:3]) %>%
+mutate(comb = map2_chr(l1,l2, ~ sort(c(.x,.y)) %>% 
+              paste(collapse =""))) %>% 
+mutate(migration = ifelse(l1==l2,.95, abs(rnorm(nrow(.),.01,.10)))) %>%   
+group_by(l1) %>% 
+mutate(migration = migration / sum( migration)) %>%
+select(-comb) %>% spread(l1,migration)
+
+
+
+mig_m <- migration_matrix(c("a_S02","b_S02"),c("a_S03","b_S03"), .95,.10) %>% 
+         pull(vert) %>% reduce(`+`)
+
+
+plot(mig_m)
+letters[1:3] %>% map(~ .x %>% paste0(letters[1:3])) %>% unlist()
+
+S %>% get_edge_names() %>%
+mutate(change = )
 
 ```
 
