--- a/README.Rmd
+++ b/README.Rmd
@@ -23,6 +23,7 @@ library(tidyverse)
 library(tidygraph)
 library(ggraph)
 library(patchwork)
+library(igraph)
 library(magrittr)
 library(ralget)
 ```
@@ -206,43 +207,6 @@ This creates a ralget/tidygraph object:
 v("x", Latitude=  78.26077, Longitude=  -94.11077)
 ```
 
-### Installation
-You can install the development version from [GitHub](https://github.com/) with:
-``` r
-# install.packages("devtools")
-devtools::install_github("ianmoran11/ralget")
-```
-
-## Algegraic laws
-
-### Addition is commutative
-$$ 
-V_1 + V_2 = V_2 + V_1 
-$$
-```{r}
-(v1+v2)==(v2+v1)
-```
-
-$$ 
-V_1 \times V_2 \neq V_2 \times V_1 
-$$
-
-```{r}
-(v1*v2)==(v2*v1)
-```
-
-### Multiplication is distributive
-```{r}
-(v1*(v2+v3))==((v1*v2)+(v1*v3))
-```
-
-$$ 
-V_1 \times (V_2 + V_3) = V_1 \times V_2 + V_1 \times V_3
-$$ 
-
-```{r}
-((v2+v3)*v1)==((v2*v1)+(v3*v1))
-```
 
 ### Edges 
 
@@ -260,24 +224,9 @@ g <- v("X1") * e("E:X1.X2") * v("X2")
 plot(g)
 ```
 
-This provides a framework for constructing and simulating data from DAGs.
-
-```{r echo=TRUE, message=FALSE, warning=FALSE, include = TRUE, fig.height=6, fig.width=14.5}
-z1 <- v("z1", form = quo(rnorm(1,100,15)))
-x1 <- v("x1", form = quo(rnorm(1,100,15)))
-x2 <- v("x2", form = quo(rnorm(1,100,15)))
- y <- v("y", form = quo(rnorm(1,0,15)))
-
-reg <-   (sumv(x1*e(.5), x2*e(.3))*y) + ((z1*sumv(e(.4)*x1, e(.3)*y))) 
-
-reg <-      ( x1*e(.5) + x2*e(.3)) * y  + 
-       z1 * ( e(.4)*x1 +  e(.3)*y)
-
-empty_graph <- v("") %>% filter(row_number() < 1)
-ggraph(empty_graph) + plot(reg) + ggraph(empty_graph)
-
-```
-
-```{r echo=TRUE, message=FALSE, warning=FALSE, include = TRUE}
-ralget_sim(reg, 1000)
+### Installation
+You can install the development version from [GitHub](https://github.com/) with:
+``` r
+# install.packages("devtools")
+devtools::install_github("ianmoran11/ralget")
 ```
